[gd_scene load_steps=5 format=3 uid="uid://772nxriwniup"]

[ext_resource type="Script" uid="uid://cg4fewp4p6wga" path="res://plr/wanderer.gd" id="1_ot3ft"]
[ext_resource type="Texture2D" uid="uid://bp2g2ughoo0nn" path="res://icon.svg" id="2_lhawg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p37r8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nm7s"]
radius = 46.0435

[node name="wanderer" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 3
collision_mask = 6
slide_on_ceiling = false
script = ExtResource("1_ot3ft")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.390625)
texture = ExtResource("2_lhawg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p37r8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7nm7s")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
